# feast-ibm-quickstart

./: .gitignore  README.md  inference.py  pyproject.toml  test_workflow.py  training.py
feature_repo/: example_repo.py  feature_store.yaml  pyproject.toml  training.py
