[tool.poetry]
name = "feast-ibm-quickstart"
version = "0.1.0"
description = ""
authors = ["Abhay Ratnaparkhi <Abhay.Ratnaparkhi1@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feast = {extras = ["redis"], version = "^0.25.0"}
ibm-data-engine = { path = "/path/to/ibm-data-engine" }
datetime = "^4.7"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
